# DudeWheresMyLogs

./: .gitignore  DudeWheresMyLogs.py  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
lab/: README.md  deploy.sh  main.bicep  policy-groundtruth.yaml  seed.sh  teardown.sh
policies/: baseline.yaml
src/dude_wheres_my_logs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/dwml/: __init__.py  azure.py  checks.py  cli.py  costs.py  diagnostics.py  diffing.py  policy.py  prices.json  reporting.py  tenant.py  term.py  workspaces.py
tests/: test_cli_reporting.py
