[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Dude Wheres My Logs"
version = "1.0.0"
description = "Cloud log health checker"
requires-python = ">=3.8"
dependencies = [
    "azure-cli",
]
readme = "README.md"
authors = [
    {name = "KernelCaleb", email = "kernelcaleb@misconfigured.io"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
DudeWheresMyLogs = "dwml.__main__:main"