[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DudeWheresMyLogs"
version = "2.0.0"
description = "Azure diagnostic logging auditor - find missing logs, duplicate log shipping, and wasted spend"
requires-python = ">=3.9"
dependencies = [
    "azure-identity",
    "azure-mgmt-resource",
    "azure-mgmt-subscription",
    "azure-mgmt-monitor>=6.0.0,<7.0.0",
    "azure-mgmt-loganalytics",
]
readme = "README.md"
license = "MIT"
authors = [
    {name = "KernelCaleb", email = "kernelcaleb@misconfigured.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
DudeWheresMyLogs = "dwml.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
