[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DudeWheresMyLogs"
version = "2.6.0"
description = "Azure log health auditor - is logging configured, flowing, used, and worth the money?"
requires-python = ">=3.9"
dependencies = [
    "azure-identity",
    "azure-mgmt-resource",
    "azure-mgmt-subscription",
    "azure-mgmt-monitor>=6.0.0,<7.0.0",
    "azure-mgmt-loganalytics",
    "azure-monitor-query",
    "pyyaml",
]
readme = "README.md"
license = "MIT"
authors = [
    {name = "KernelCaleb", email = "kernelcaleb@misconfigured.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
DudeWheresMyLogs = "dwml.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dwml = ["prices.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
